feature(*): adds daily active cooldown metric
